--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
         </div>
 
         <div class="col s3">
-          <button class="btn-large waves-effect waves-light" type="submit" name="action">
+          <button class="btn-large waves-effect waves-light btn" type="submit" name="action">
             <i class="material-icons right">search</i>
             Search
           </button>
         </div>
       </form>
+      <!-- <button class="btn-large waves-effect waves-light btn" type="submit" name="action">
+        <i class="material-icons right">search</i>
+        Search
+      </button> -->
     </div>
 
     <div id="listings" class="row"></div>
